# postgres-migrator-rs

./: Cargo.toml  LICENCE.txt
migrations/create_table_syntax_error/: init.sql
migrations/simple_create_table/: init.sql
src/: lib.rs  main.rs  migration.rs
src/migration/: migrator.rs
tests/: migrator.rs
