[package]
name = "postgres-migrator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
chrono = "0.4.23"
clap = { version = "4.0.30", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
testcontainers = "0.14.0"
